--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 		canvas {
 			margin:auto;
 		}
+
+		/* my style */
+		canvas {
+			margin: 10px;
+			display: block;
+		}
+
+		button {
+			margin: 0 0 0 10px;
+		}
+
+		input {
+			margin : 0 0 0 10px;
+		}
 	</style>
 </head>
 <body>
